# universums-sim

./: .gitignore  .zenodo.json  AI_POLICY.md  Agents.md  CHRONOPOEM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERFILE  Handbuch.md  LICENSE  README.md  ToDo.yaml  agents_chain.mmd  agents_ci.yaml  codex-sigil.yaml  codex-sync.sh  codex-sync.yaml  codex_sync_manifest.yaml  codexinstructions.yaml  codexwork.yaml  dev-agents.md  fraktal-zyklus.md  kontext.json  kontext.yaml  mkdocs.yml  pyproject.toml  runDryAgent.ts
.github/workflows/: ci.yml  release.yml
config/: sigillin.schema.json
docs/: CREPPhaseMatrix.yaml  Datenmanagement.md  GenesisChronik.md  GenesisScriptSpec.md  Programmstruktur.md  TheorieKonsolidierung.md  changelog.md  cli.md  index.md  mastercanvas.yaml  phase2-map.yaml  reference.md  symbolzeit.yaml
docs/agents/: codexaudit.md  depthbundleexporter.md  evolvergpt.md  fragmentmapper.md  pactdepthgatekeeper.md  syncrunner.md
docs/api/: index.html
docs/api/assets/: navigation.js  search.js
docs/api/classes/: crep_engine_CREPEvaluator.CREPEvaluator.html  crep_engine_CREPManager.CREPManager.html  crep_engine_EmergenzScanner.EmergenzScanner.html
docs/api/functions/: genesis_sigillin_core_SigillinGenerator.SigillinGenerator.html  genesis_sigillin_core_SigillinSyncManager.syncSigillinStatus.html  unifiedmandala_ui_components_AeonStoryMode.default.html  unifiedmandala_ui_components_CREPChart.default.html  unifiedmandala_ui_components_CREPTooltip.default.html  unifiedmandala_ui_components_CREPTriggerPanel.default.html  unifiedmandala_ui_components_MandalaNetworkView.MandalaNetworkView.html  unifiedmandala_ui_components_SigillinMap.default.html  unifiedmandala_ui_components_SigillinViewer.default.html  unifiedmandala_ui_components_SoforthilfeOverlay.default.html  unifiedmandala_ui_components_SymbolicWayfinder.default.html  unifiedmandala_ui_hooks_useCREP.useCREP.html  unifiedmandala_ui_hooks_useSymbolzeit.useSymbolzeit.html
docs/api/interfaces/: crep_engine_types.CREPEntry.html  genesis_sigillin_core_types.Sigillin.html
docs/api/modules/: crep_engine_CREPEvaluator.html  crep_engine_CREPManager.html  crep_engine_EmergenzScanner.html  crep_engine_types.html  genesis_sigillin_core_SigillinGenerator.html  genesis_sigillin_core_SigillinSyncManager.html  genesis_sigillin_core_types.html  gpt_bridges_GPTEventHub.html  unifiedmandala_ui_components_AeonStoryMode.html  unifiedmandala_ui_components_CREPChart.html  unifiedmandala_ui_components_CREPTooltip.html  unifiedmandala_ui_components_CREPTriggerPanel.html  unifiedmandala_ui_components_MandalaNetworkView.html  unifiedmandala_ui_components_SigillinMap.html  unifiedmandala_ui_components_SigillinViewer.html  unifiedmandala_ui_components_SoforthilfeOverlay.html  unifiedmandala_ui_components_SymbolicWayfinder.html  unifiedmandala_ui_hooks_useCREP.html  unifiedmandala_ui_hooks_useSymbolzeit.html
docs/api/variables/: gpt_bridges_GPTEventHub.GPTEventHub.html
docs/sigil/: big-files.sigil.yaml
docs/sigils/: SIGILLIN_GENESIS.md  aeon-2025-0516-instructional-zip.yaml  aeon-2025-0604-README-COMMIT.yaml  aeon-2025-0604-docs-build.yaml  aeonecho_resonanzraum.sigil.json  aeonshell-genesis.sigil.json  conversations-progress.json  generated-todo.sigil.yaml  genesisaeon_startsigillin.sigil.json  sigillin-genesis-interface-masterplan.yaml  sigillin_fraktalursprung.sigil.json  sigillin_genesis_aeon_universal.json  sigillin_genesis_gateway.json  sigillin_genesis_instruction.md  sigillin_heimkehr.md  todo-sigil.yaml  🜁 SigillinManifest – GenesisInterfaceMaster.yaml
repositorypflege/: ReadMeVorlage.yaml  repo-konzept.yaml  repository_map.yaml
scripts/: filter-conversations.js  generate-agent-svg.sh  generate-todo-sigil.js  list-fragments.js  mark-fragment.js  setup-unifiedmandala.sh  sigillin_validator.py  split-conversations.js
scripts/hooks/: sendemail-validate.sh
src/universums_sim/: __init__.py
src/universums_sim/cli/: __init__.py  main.py
src/universums_sim/governance/: __init__.py  entropy.py
src/universums_sim/integrations/: __init__.py  registry.py
src/universums_sim/simulation/: __init__.py  core.py  emergence.py  lagrangian.py
src/universums_sim/visualization/: __init__.py  live.py
tests/: __init__.py  conftest.py  test_core.py  test_e2e.py  test_emergence.py  test_engine.py  test_extra.py  test_governance.py  test_init.py  test_integrations.py  test_lagrangian.py  test_sigillin_validator.py  test_visualization.py
